# PasswordManager

./: .gitignore  CMakeLists.txt
CryptDLL/: CMakeLists.txt
CryptDLL/include/: PasswordManager.h
CryptDLL/source/: PasswordManager.cpp
PasswordManager/: CMakeLists.txt
PasswordManager/include/: UIConnector.h
PasswordManager/qt/: Footer.qml  Header.qml  LogonForm.qml  MainField.qml  main.qml  qml.qrc
PasswordManager/source/: UIConnector.cpp  main.cpp
